--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Trombone Lip Break Finder</title>
   <script defer="defer" src="bundle.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="container">
     <h1>Trombone Lip Break Finder</h1>
           <label for="partial">Select partial</label>
-          <input type="number" id="input-number" name="partial" min="1" max="12">
-          <div id="lip-breaks-output">
+          <input type="number" id="input-number" class="form-control form-control-xl" name="partial" min="1" max="12">
+          <div id="lip-breaks-output" class="container">
             <!-- <ul>
               <li>Bb1 in position 1</li>
               <li>A1 in position 2</li>
@@ -25,6 +26,7 @@
             </ul> -->
           </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
