--- a/index.html
+++ b/index.html
@@ -28,19 +28,7 @@
       <option>11</option>
       <option>12</option>
     </select>
-    <label for="partial">Select partial (legacy)</label>
-    <input type="number" id="input-number" class="form-control form-control-xl" name="partial" min="1" max="12">
-    <div id="lip-breaks-output" class="container">
-      <!-- <ul>
-              <li>Bb1 in position 1</li>
-              <li>A1 in position 2</li>
-              <li>Ab1 in position 3</li>
-              <li>G1 in position 4</li>
-              <li>F#1 in position 5</li>
-              <li>F1 in position 6</li>
-              <li>E in position 7</li>
-            </ul> -->
-    </div>
+    <div id="lip-breaks-output" class="container"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
